🍏🍛 Updated with Glitch

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    
+    {# This is the base template for the site–other templates extend this one #}
+    
     <meta charset="utf-8" />
     <link rel="icon" href="https://glitch.com/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -10,6 +13,8 @@
   </head>
   <body>
   <main>
+    
+    {# Page or post content will appear here #}
   
     {{ content | safe }}
 
