--- a/src/_includes/layouts/posts.njk
+++ b/src/_includes/layouts/posts.njk
@@ -3,6 +3,8 @@ layout: layouts/base.njk
 templateClass: tmpl-home
 ---
 
+{# This is the template for the Posts page–it lists the posts in the collection #}
+
 <div class="wrapper home">
   <div class="content">
     {{ content | safe }}
