--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -3,12 +3,17 @@ layout: layouts/base.njk
 templateClass: tmpl-home
 ---
 
+{# This is the template for individual blog posts–it builds the front matter properties into the page #}
+
 <div class="wrapper post">
   <div>
+    {# The post front matter includes the title property #}
     <h1 class='postTitle'>{{title}}</h1>
 
+    {# Content from the body of the post markdown appears here #}
     {{ content | safe }}
     <div class="controls">
+    {# The previous and next post data is added in .eleventy.js #}
     {% if prevPost.url %}
       <p>
         <strong>Previous post</strong>: 
