--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -10,7 +10,7 @@
     <meta name="description" content="Your new 11ty blog" />
     <link rel="stylesheet" type="text/css" href="/public/style.css" />
      <!-- PWA setup -->
-    <link rel="manifest" href="/public/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
     <script>
       if (location.protocol == "http:") location.protocol = "https:";
       if ("serviceWorker" in navigator) {
